@@ -6,6 +6,14 @@ ${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload
 ${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
 ${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
 
+TAG: goload-6-0-11-2
+DATE: 10/11/2017
+STAFF: sc
+CHANGES: 
+1. goamouse/goamouse.config.default remove ANNOTPOSTFILE
+2. goamouse/goamouse.sh - remove call to goamousepost.py
+3. goamouse/goamousepost.py - removed this script
+
 TAG: goload-6-0-11-1
 DATE: 10/11/2017
 STAFF: sc
